objects/Proposed_Products__c.object
<CustomObject>
    <fields>
        <fullName>Medical_Product_Name__c</fullName>
        <label>Medical Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlueChoice HMO</fullName>
                </value>
                <value>
                    <fullName>BlueChoice HMO Open Access</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Opt-Out Open Access</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Opt-Out Plus Open Access</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Advantage</fullName>
                </value>
                <value>
                    <fullName>BluePreferred PPO</fullName>
                </value>
                <value>
                    <fullName>BlueChoice HMO Open Access HSA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice HMO Open Access HRA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice HMO Open Access HRA Non-Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice HMO Open Access High Deductible Health Plan Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Opt-Out Plus Open Access HSA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Opt-Out Plus Open Access HRA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Opt-Out Plus Open Access HRA Non-Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Opt-Out Plus Open Access High Deductible Health Plan Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Advantage HSA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Advantage HRA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BlueChoice Advantage HRA Non-Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BluePreferred HSA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BluePreferred HRA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BluePreferred HRA Non-Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>BluePreferred Integrated High Deductible</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue HMO Non-Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue HMO HRA Non-Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue HMO HRA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue HMO HSA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue 2.0 Non-Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue 2.0 HRA Non-Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue 2.0 HSA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue 2.0 HRA Integrated Deductible</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue Advantage Non-Integrated Deductible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Product_Option__c</fullName>
        <label>Medical Product Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Product_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_Levels__c</fullName>
        <label>Network Levels</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>RX Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Fee_Schedule_Comments__c</fullName>
        <description>Value required when 'Non-Standard Fee Schedule' is selected as 'True'. US479</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-Standard Fee Schedule Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Fee_Schedule__c</fullName>
        <description>This field identifies a special/non-standard fee schedule for claims.  It is not the UW fee schedule. US</description>
        <inlineHelpText>This field identifies a special/non-standard fee schedule for claims. It is not the UW fee schedule.</inlineHelpText>
        <label>Non-Standard Fee Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_preferred_Brand_Drugs_Tier_3__c</fullName>
        <label>Non-preferred Brand Drugs (Tier 3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>B-03464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OTCCovered__c</fullName>
        <label>OTC Covered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OldPPCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OldPPCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Benefit_Request_Form__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OralChemoCopayApply__c</fullName>
        <label>Oral Chemo Copay Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OralChemoDedApply__c</fullName>
        <label>Oral Chemo Ded Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OralChemoMandateApply__c</fullName>
        <inlineHelpText>Oral Chemotherapy Mandate Apply</inlineHelpText>
        <label>Oral Chemotherapy Mandate Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Effective_Date_Final_Drawloop__c</fullName>
        <formula>/*IF(Benefit_Request_Form__r.Account__r.Has_Sub_Groups__c = False,
	(Benefit_Request_Form__r.Account__r.NASCO_Original_Effective_Date__c)  ,
	                       IF(ISBLANK(Benefit_Request_Form__r.Sub_Group_Account__c ),
															(Sub_Group_Account__r.NASCO_Original_Effective_Date__c) , 
																	(Benefit_Request_Form__r.Sub_Group_Account__r.NASCO_Original_Effective_Date__c)))*/
 Benefit_Request_Form__r.Account__r.NASCO_Original_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Effective Date Final Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orthodontia_Endorsement__c</fullName>
        <inlineHelpText>Ortho covered for any member, any age (standard for BlueDental Plus)</inlineHelpText>
        <label>Orthodontia Endorsement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Requirement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Requirement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Requirements__c</fullName>
        <description>B-03464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Requirements</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Out_of_Pocket_Accumulator_Method__c</fullName>
        <label>Out of Pocket  Accumulator Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stacked</fullName>
                </value>
                <value>
                    <fullName>Unstacked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_Pocket_Max__c</fullName>
        <label>Family Out-of-Pocket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stacked</fullName>
                </value>
                <value>
                    <fullName>Unstacked</fullName>
                </value>
                <value>
                    <fullName>Non-Stacked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDPD_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Check Sales Grid</inlineHelpText>
        <label>PDPD ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Header_name_drawloop__c</fullName>
        <formula>IF(TEXT(Product_Category__c) = 'Medical','Medical Benefit Package',IF(TEXT(Product_Category__c) = 'Drug','Rx Benefit Package',IF(TEXT(Product_Category__c) = 'Vision','Vision Benefit Request Form',IF(TEXT(Product_Category__c) = 'Dental','Dental Benefit Package',''))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PP Header name drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_REcordtypeDeveloperName__c</fullName>
        <formula>SUBSTITUTE(RecordType.Name, '_', ' ')</formula>
        <label>PP REcordtypeDeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Name</label>
        <referenceTo>AIA_Plan__c</referenceTo>
        <relationshipLabel>Proposed Products</relationshipLabel>
        <relationshipName>Proposed_Products_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Product_Name__c</fullName>
        <formula>Plan_Name__r.Plan_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <formula>Plan_Name__r.Plan_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_prod_sub_category_Drawloop1__c</fullName>
        <formula>TEXT(Plan_Name__r.Product_Sub_Category__c)</formula>
        <label>Plan prod sub category Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Brand_Drugs_Tier_2__c</fullName>
        <label>Preferred Brand Drugs (Tier 2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prescribed_Oral_Contraceptives_Devic__c</fullName>
        <inlineHelpText>Prescribed Oral Contraceptives and Devices</inlineHelpText>
        <label>Prescribed Oral Contraceptives &amp; Devic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Woman’s Preventive Services (standard with Preventive $0 copay unless religious exclusion)</fullName>
                </value>
                <value>
                    <fullName>Woman’s Preventive Services Exempt – No Benefits</fullName>
                </value>
                <value>
                    <fullName>Woman’s Preventive Services Accommodated – Full Exemption</fullName>
                </value>
                <value>
                    <fullName>Woman’s Preventive Services Accommodated – Emergency Contraception</fullName>
                </value>
                <value>
                    <fullName>Mandated Benefits (standard for Grandfathered unless Preventive / WPS chosen) Oral, Transdermal, Non-surgical Injectables, Cervical Cap and Diaphargms.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preventive_Drugs_Affordable_Care_Act__c</fullName>
        <label>Preventive Drugs (Affordable Care Act)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preventive_Drugs_Copay_Amount__c</fullName>
        <label>Preventive Drugs Copay Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrevntvCovrd__c</fullName>
        <label>Preventive Covered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrevntvDrugCopayAmount__c</fullName>
        <label>Preventive Drug Copay Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorAuth__c</fullName>
        <label>Prior Authorization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Auth_Drawloop__c</fullName>
        <formula>IF( Prior_Authorization__c = true,"Yes","No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Auth Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prior Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Drug</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>CareFirst Private exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Financial_Arrangement__c</fullName>
        <label>Product Financial Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DENTAL</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>VISION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Option__c</fullName>
        <label>Product Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Parent_Name__c</fullName>
        <formula>Plan_Name__r.Full_Plan_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RXIntegration__c</fullName>
        <formula>TEXT(   Related_Medical_Product__r.Integrated_Non_Integrated__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RX Ded Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_OOP_Max_Integration__c</fullName>
        <label>RX OOP Max Integration</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Integrated_OOP_Integration__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Non-Integrated</fullName>
                </value>
                <value>
                    <fullName>Integrated - Carve-Out</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebates_Withheld_by_CareFirstF1__c</fullName>
        <formula>TEXT(Benefit_Request_Form__r.Rebates_Withheld_by_CareFirst__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebates Withheld by CareFirst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebates_Withheld_by_CareFirstF__c</fullName>
        <formula>TEXT(Benefit_Request_Form__r.Rebates_Withheld_by_CareFirst__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebates Withheld by CareFirst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebates_Withheld_by_CareFirst__c</fullName>
        <label>Rebates Withheld by CareFirst</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>50% (Requires Management Approval)</fullName>
                </value>
                <value>
                    <fullName>100% (Requires Senior Management Approval)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_drawloop__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Medical_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Medical Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Proposed_Products__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Medical_Risk</value>
            </filterItems>
            <filterItems>
                <field>Proposed_Products__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Medical_ASO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Proposed_Products__c</referenceTo>
        <relationshipLabel>Related Ancillary Products</relationshipLabel>
        <relationshipName>Proposed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Date_Drawloop__c</fullName>
        <formula>/*IF(Benefit_Request_Form__r.Account__r.Has_Sub_Groups__c = False, 
	(Benefit_Request_Form__r.Account__r.Final_Renewal_Date__c ) , 
				IF(ISBLANK(Benefit_Request_Form__r.Sub_Group_Account__c ), 
						(Sub_Group_Account__r.Final_Renewal_Date__c ) , 
								(Benefit_Request_Form__r.Sub_Group_Account__r.Final_Renewal_Date__c )))*/
 Benefit_Request_Form__r.Account__r.Final_Renewal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Date Final Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RetDispnsMaintDaysSupp__c</fullName>
        <inlineHelpText>Retail Dispensing Maintenance Days Supply</inlineHelpText>
        <label>Retail Dispensing Maint Days Supply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision_Number_Drawloop__c</fullName>
        <formula>"SF-" + Text(Benefit_Request_Form__r.Revision_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revision Number Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rider_Comments__c</fullName>
        <description>story 3718. applicable only for medical products</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rider Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rider__c</fullName>
        <description>Backlog Item B-03718. applicable only for medical products</description>
        <label>Rider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Infertility Services Coverage Rider (DC/VA)</fullName>
                </value>
                <value>
                    <fullName>Family Planning Benefits Exclusion Rider (DC/VA/MD)</fullName>
                </value>
                <value>
                    <fullName>Hearing Aid Rider (DC)</fullName>
                </value>
                <value>
                    <fullName>Hearing Care Rider (MD)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RxFundamentalApply__c</fullName>
        <label>Rx Fundamental Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RxFundamentalDedCopayRule__c</fullName>
        <label>Rx Fundamental Ded Copay Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waive Ded/Waive Copay (Standard)</fullName>
                </value>
                <value>
                    <fullName>Waive Ded/Apply Copay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Optiions_Drawloop__c</fullName>
        <formula>Plan_Name__r.Option__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rx Optiions Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_network1__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Rx_Network__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type "ASO"</inlineHelpText>
        <label>Rx network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_network__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Rx_Network__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type "ASO"</inlineHelpText>
        <label>Rx network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_administered_Injectable_Tier_4__c</fullName>
        <label>Self-administered Injectable (Tier 4)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Rep_Name_Phone_Drawloop__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Opportunity__r.Service_Rep__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Rep Name Phone  Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stand_Alone_Disease_Management__c</fullName>
        <label>Stand Alone Disease Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>